# SolMate

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  README.md  RELEASE.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  package.json
backend/: .env.example  package.json
backend/src/: app.js  index.js
backend/src/config/: config.js  database.js  index.js
backend/src/controllers/: adminController.js  aiConversation.controller.js  authController.js  chatController.js  llmController.js  riskAnalysis.controller.js  riskController.js  token.controller.js
backend/src/middleware/: authMiddleware.js
backend/src/middlewares/: auth.js  errorHandler.js
backend/src/models/: Message.js  Strategy.js  Token.js  User.js
backend/src/routes/: admin.js  aiConversation.routes.js  analytics.js  auth.js  chat.js  index.js  llm.js  risk.js  riskAnalysis.routes.js  strategies.js  token.routes.js  tokens.js
backend/src/services/: cacheService.js  llmService.js  nlpService.js  responseManagerService.js  riskScoringService.js  solanaService.js
backend/src/utils/: jwt.js  logger.js  solana.js
contracts/: Anchor.toml
contracts/programs/token-tracker/: Cargo.toml  lib.rs
contracts/tests/: token-tracker.ts
frontend/: Dockerfile  package.json
frontend/src/: App.css  App.js  index.css
frontend/src/components/: ConversationalInterface.js  Footer.js  Header.js  LLMProviderSelector.js  ModelComparisonTool.js  RiskAnalysis.js  StreamingChatMessage.js  WalletConnect.js
scripts/: install.sh  start.sh
(+18 files in other folders)
