[package]
name = "token-tracker"
version = "0.1.0"
description = "Token tracking program for SolMate"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_tracker"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
solana-program = "1.16.0" 